fannie-compiler/src/main/antlr4/.antlr/fannieParserParser.java
// Generated from c:\Users\Patrick\Documents\GitHub\SW4-2022\fannie-compiler\src\main\antlr4\fannieParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class fannieParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		COMPLEX_IDENTIFIER=10, CONTAIN=11, REMOVE=12, TOOL_BASIC_TYPE_IDENTIFIER=13, 
		INGREDIENT_BASIC_TYPE_IDENTIFIER=14, MAIN=15, RECIPE=16, INGREDIENT_LIST=17, 
		TOOL_LIST=18, STEP_LIST=19, OR=20, AMOUNT=21, WEIGHT_UNIT=22, ABSTRACT_UNIT=23, 
		TO_TASTE=24, SERVE=25, DO=26, DESCRIPTION_STRING=27, START=28, STOP=29, 
		WHEN=30, CONTENT_IN=31;
	public static final int
		RULE_toolIdentifier = 0, RULE_toolActionIdentifier = 1, RULE_toolTypeIdentifier = 2, 
		RULE_ingredientTypeIdentifier = 3, RULE_ingredientIdentifier = 4, RULE_recipeIdentifier = 5, 
		RULE_procIdentifier = 6, RULE_fannie = 7, RULE_mainRecipe = 8, RULE_subRecipe = 9, 
		RULE_recipeBody = 10, RULE_ingredientsList = 11, RULE_toolsList = 12, 
		RULE_stepsList = 13, RULE_ingredientDeclaration = 14, RULE_deterministicIngredientDeclaration = 15, 
		RULE_nondeterministicIngredientDeclaration = 16, RULE_recipeIngredientDeclaration = 17, 
		RULE_ingredientTypeDeclaration = 18, RULE_amountDeclaration = 19, RULE_toolDeclaration = 20, 
		RULE_toolActionDeclarationsList = 21, RULE_toolActionDeclaration = 22, 
		RULE_stepDeclaration = 23, RULE_serveStepDeclaration = 24, RULE_doStepDeclaration = 25, 
		RULE_continousDoStepStartDeclaration = 26, RULE_continousDoStepStopDeclaration = 27, 
		RULE_stepIn = 28, RULE_stepOut = 29, RULE_contentIn = 30, RULE_ingredientCollection = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"toolIdentifier", "toolActionIdentifier", "toolTypeIdentifier", "ingredientTypeIdentifier", 
			"ingredientIdentifier", "recipeIdentifier", "procIdentifier", "fannie", 
			"mainRecipe", "subRecipe", "recipeBody", "ingredientsList", "toolsList", 
			"stepsList", "ingredientDeclaration", "deterministicIngredientDeclaration", 
			"nondeterministicIngredientDeclaration", "recipeIngredientDeclaration", 
			"ingredientTypeDeclaration", "amountDeclaration", "toolDeclaration", 
			"toolActionDeclarationsList", "toolActionDeclaration", "stepDeclaration", 
			"serveStepDeclaration", "doStepDeclaration", "continousDoStepStartDeclaration", 
			"continousDoStepStopDeclaration", "stepIn", "stepOut", "contentIn", "ingredientCollection"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "','", "'('", "')'", "'['", "']'", "':'", "'=>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "COMPLEX_IDENTIFIER", 
			"CONTAIN", "REMOVE", "TOOL_BASIC_TYPE_IDENTIFIER", "INGREDIENT_BASIC_TYPE_IDENTIFIER", 
			"MAIN", "RECIPE", "INGREDIENT_LIST", "TOOL_LIST", "STEP_LIST", "OR", 
			"AMOUNT", "WEIGHT_UNIT", "ABSTRACT_UNIT", "TO_TASTE", "SERVE", "DO", 
			"DESCRIPTION_STRING", "START", "STOP", "WHEN", "CONTENT_IN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "fannieParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public fannieParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ToolIdentifierContext extends ParserRuleContext {
		public TerminalNode COMPLEX_IDENTIFIER() { return getToken(fannieParserParser.COMPLEX_IDENTIFIER, 0); }
		public ToolIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toolIdentifier; }
	}

	public final ToolIdentifierContext toolIdentifier() throws RecognitionException {
		ToolIdentifierContext _localctx = new ToolIdentifierContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_toolIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(COMPLEX_IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToolActionIdentifierContext extends ParserRuleContext {
		public TerminalNode COMPLEX_IDENTIFIER() { return getToken(fannieParserParser.COMPLEX_IDENTIFIER, 0); }
		public TerminalNode CONTAIN() { return getToken(fannieParserParser.CONTAIN, 0); }
		public TerminalNode REMOVE() { return getToken(fannieParserParser.REMOVE, 0); }
		public ToolActionIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toolActionIdentifier; }
	}

	public final ToolActionIdentifierContext toolActionIdentifier() throws RecognitionException {
		ToolActionIdentifierContext _localctx = new ToolActionIdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_toolActionIdentifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMPLEX_IDENTIFIER) | (1L << CONTAIN) | (1L << REMOVE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToolTypeIdentifierContext extends ParserRuleContext {
		public TerminalNode COMPLEX_IDENTIFIER() { return getToken(fannieParserParser.COMPLEX_IDENTIFIER, 0); }
		public TerminalNode TOOL_BASIC_TYPE_IDENTIFIER() { return getToken(fannieParserParser.TOOL_BASIC_TYPE_IDENTIFIER, 0); }
		public ToolTypeIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toolTypeIdentifier; }
	}

	public final ToolTypeIdentifierContext toolTypeIdentifier() throws RecognitionException {
		ToolTypeIdentifierContext _localctx = new ToolTypeIdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_toolTypeIdentifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_la = _input.LA(1);
			if ( !(_la==COMPLEX_IDENTIFIER || _la==TOOL_BASIC_TYPE_IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IngredientTypeIdentifierContext extends ParserRuleContext {
		public TerminalNode COMPLEX_IDENTIFIER() { return getToken(fannieParserParser.COMPLEX_IDENTIFIER, 0); }
		public TerminalNode INGREDIENT_BASIC_TYPE_IDENTIFIER() { return getToken(fannieParserParser.INGREDIENT_BASIC_TYPE_IDENTIFIER, 0); }
		public IngredientTypeIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ingredientTypeIdentifier; }
	}

	public final IngredientTypeIdentifierContext ingredientTypeIdentifier() throws RecognitionException {
		IngredientTypeIdentifierContext _localctx = new IngredientTypeIdentifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ingredientTypeIdentifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_la = _input.LA(1);
			if ( !(_la==COMPLEX_IDENTIFIER || _la==INGREDIENT_BASIC_TYPE_IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IngredientIdentifierContext extends ParserRuleContext {
		public TerminalNode COMPLEX_IDENTIFIER() { return getToken(fannieParserParser.COMPLEX_IDENTIFIER, 0); }
		public IngredientIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ingredientIdentifier; }
	}

	public final IngredientIdentifierContext ingredientIdentifier() throws RecognitionException {
		IngredientIdentifierContext _localctx = new IngredientIdentifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ingredientIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(COMPLEX_IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecipeIdentifierContext extends ParserRuleContext {
		public TerminalNode COMPLEX_IDENTIFIER() { return getToken(fannieParserParser.COMPLEX_IDENTIFIER, 0); }
		public RecipeIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recipeIdentifier; }
	}

	public final RecipeIdentifierContext recipeIdentifier() throws RecognitionException {
		RecipeIdentifierContext _localctx = new RecipeIdentifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_recipeIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(COMPLEX_IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcIdentifierContext extends ParserRuleContext {
		public TerminalNode COMPLEX_IDENTIFIER() { return getToken(fannieParserParser.COMPLEX_IDENTIFIER, 0); }
		public ProcIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procIdentifier; }
	}

	public final ProcIdentifierContext procIdentifier() throws RecognitionException {
		ProcIdentifierContext _localctx = new ProcIdentifierContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_procIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(COMPLEX_IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FannieContext extends ParserRuleContext {
		public MainRecipeContext mainRecipe() {
			return getRuleContext(MainRecipeContext.class,0);
		}
		public TerminalNode EOF() { return getToken(fannieParserParser.EOF, 0); }
		public List<SubRecipeContext> subRecipe() {
			return getRuleContexts(SubRecipeContext.class);
		}
		public SubRecipeContext subRecipe(int i) {
			return getRuleContext(SubRecipeContext.class,i);
		}
		public FannieContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fannie; }
	}

	public final FannieContext fannie() throws RecognitionException {
		FannieContext _localctx = new FannieContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fannie);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			mainRecipe();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RECIPE) {
				{
				{
				setState(79);
				subRecipe();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainRecipeContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(fannieParserParser.MAIN, 0); }
		public TerminalNode RECIPE() { return getToken(fannieParserParser.RECIPE, 0); }
		public RecipeIdentifierContext recipeIdentifier() {
			return getRuleContext(RecipeIdentifierContext.class,0);
		}
		public RecipeBodyContext recipeBody() {
			return getRuleContext(RecipeBodyContext.class,0);
		}
		public MainRecipeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainRecipe; }
	}

	public final MainRecipeContext mainRecipe() throws RecognitionException {
		MainRecipeContext _localctx = new MainRecipeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mainRecipe);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(MAIN);
			setState(88);
			match(RECIPE);
			setState(89);
			recipeIdentifier();
			setState(90);
			match(T__0);
			setState(91);
			recipeBody();
			setState(92);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubRecipeContext extends ParserRuleContext {
		public TerminalNode RECIPE() { return getToken(fannieParserParser.RECIPE, 0); }
		public RecipeIdentifierContext recipeIdentifier() {
			return getRuleContext(RecipeIdentifierContext.class,0);
		}
		public RecipeBodyContext recipeBody() {
			return getRuleContext(RecipeBodyContext.class,0);
		}
		public SubRecipeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subRecipe; }
	}

	public final SubRecipeContext subRecipe() throws RecognitionException {
		SubRecipeContext _localctx = new SubRecipeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_subRecipe);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(RECIPE);
			setState(95);
			recipeIdentifier();
			setState(96);
			match(T__0);
			setState(97);
			recipeBody();
			setState(98);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecipeBodyContext extends ParserRuleContext {
		public IngredientsListContext ingredientsList() {
			return getRuleContext(IngredientsListContext.class,0);
		}
		public ToolsListContext toolsList() {
			return getRuleContext(ToolsListContext.class,0);
		}
		public StepsListContext stepsList() {
			return getRuleContext(StepsListContext.class,0);
		}
		public RecipeBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recipeBody; }
	}

	public final RecipeBodyContext recipeBody() throws RecognitionException {
		RecipeBodyContext _localctx = new RecipeBodyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_recipeBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			ingredientsList();
			setState(101);
			match(T__2);
			setState(102);
			toolsList();
			setState(103);
			match(T__2);
			setState(104);
			stepsList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IngredientsListContext extends ParserRuleContext {
		public TerminalNode INGREDIENT_LIST() { return getToken(fannieParserParser.INGREDIENT_LIST, 0); }
		public List<IngredientDeclarationContext> ingredientDeclaration() {
			return getRuleContexts(IngredientDeclarationContext.class);
		}
		public IngredientDeclarationContext ingredientDeclaration(int i) {
			return getRuleContext(IngredientDeclarationContext.class,i);
		}
		public IngredientsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ingredientsList; }
	}

	public final IngredientsListContext ingredientsList() throws RecognitionException {
		IngredientsListContext _localctx = new IngredientsListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_ingredientsList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(INGREDIENT_LIST);
			setState(107);
			match(T__0);
			setState(108);
			ingredientDeclaration();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(109);
				match(T__2);
				setState(110);
				ingredientDeclaration();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToolsListContext extends ParserRuleContext {
		public TerminalNode TOOL_LIST() { return getToken(fannieParserParser.TOOL_LIST, 0); }
		public List<ToolDeclarationContext> toolDeclaration() {
			return getRuleContexts(ToolDeclarationContext.class);
		}
		public ToolDeclarationContext toolDeclaration(int i) {
			return getRuleContext(ToolDeclarationContext.class,i);
		}
		public ToolsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toolsList; }
	}

	public final ToolsListContext toolsList() throws RecognitionException {
		ToolsListContext _localctx = new ToolsListContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_toolsList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(TOOL_LIST);
			setState(119);
			match(T__0);
			setState(120);
			toolDeclaration();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(121);
				match(T__2);
				setState(122);
				toolDeclaration();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepsListContext extends ParserRuleContext {
		public TerminalNode STEP_LIST() { return getToken(fannieParserParser.STEP_LIST, 0); }
		public List<StepDeclarationContext> stepDeclaration() {
			return getRuleContexts(StepDeclarationContext.class);
		}
		public StepDeclarationContext stepDeclaration(int i) {
			return getRuleContext(StepDeclarationContext.class,i);
		}
		public StepsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stepsList; }
	}

	public final StepsListContext stepsList() throws RecognitionException {
		StepsListContext _localctx = new StepsListContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_stepsList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(STEP_LIST);
			setState(131);
			match(T__0);
			setState(132);
			stepDeclaration();
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(133);
				match(T__2);
				setState(134);
				stepDeclaration();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(140);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IngredientDeclarationContext extends ParserRuleContext {
		public DeterministicIngredientDeclarationContext deterministicIngredientDeclaration() {
			return getRuleContext(DeterministicIngredientDeclarationContext.class,0);
		}
		public NondeterministicIngredientDeclarationContext nondeterministicIngredientDeclaration() {
			return getRuleContext(NondeterministicIngredientDeclarationContext.class,0);
		}
		public RecipeIngredientDeclarationContext recipeIngredientDeclaration() {
			return getRuleContext(RecipeIngredientDeclarationContext.class,0);
		}
		public IngredientTypeDeclarationContext ingredientTypeDeclaration() {
			return getRuleContext(IngredientTypeDeclarationContext.class,0);
		}
		public IngredientDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ingredientDeclaration; }
	}

	public final IngredientDeclarationContext ingredientDeclaration() throws RecognitionException {
		IngredientDeclarationContext _localctx = new IngredientDeclarationContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_ingredientDeclaration);
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				deterministicIngredientDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				nondeterministicIngredientDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				recipeIngredientDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(145);
				ingredientTypeDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeterministicIngredientDeclarationContext extends ParserRuleContext {
		public IngredientTypeIdentifierContext ingredientTypeIdentifier() {
			return getRuleContext(IngredientTypeIdentifierContext.class,0);
		}
		public IngredientIdentifierContext ingredientIdentifier() {
			return getRuleContext(IngredientIdentifierContext.class,0);
		}
		public AmountDeclarationContext amountDeclaration() {
			return getRuleContext(AmountDeclarationContext.class,0);
		}
		public DeterministicIngredientDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deterministicIngredientDeclaration; }
	}

	public final DeterministicIngredientDeclarationContext deterministicIngredientDeclaration() throws RecognitionException {
		DeterministicIngredientDeclarationContext _localctx = new DeterministicIngredientDeclarationContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_deterministicIngredientDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			ingredientTypeIdentifier();
			setState(149);
			ingredientIdentifier();
			setState(150);
			amountDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NondeterministicIngredientDeclarationContext extends ParserRuleContext {
		public List<DeterministicIngredientDeclarationContext> deterministicIngredientDeclaration() {
			return getRuleContexts(DeterministicIngredientDeclarationContext.class);
		}
		public DeterministicIngredientDeclarationContext deterministicIngredientDeclaration(int i) {
			return getRuleContext(DeterministicIngredientDeclarationContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(fannieParserParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(fannieParserParser.OR, i);
		}
		public NondeterministicIngredientDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nondeterministicIngredientDeclaration; }
	}

	public final NondeterministicIngredientDeclarationContext nondeterministicIngredientDeclaration() throws RecognitionException {
		NondeterministicIngredientDeclarationContext _localctx = new NondeterministicIngredientDeclarationContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_nondeterministicIngredientDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			deterministicIngredientDeclaration();
			setState(155); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(153);
				match(OR);
				setState(154);
				deterministicIngredientDeclaration();
				}
				}
				setState(157); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==OR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecipeIngredientDeclarationContext extends ParserRuleContext {
		public TerminalNode RECIPE() { return getToken(fannieParserParser.RECIPE, 0); }
		public RecipeIdentifierContext recipeIdentifier() {
			return getRuleContext(RecipeIdentifierContext.class,0);
		}
		public RecipeIngredientDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recipeIngredientDeclaration; }
	}

	public final RecipeIngredientDeclarationContext recipeIngredientDeclaration() throws RecognitionException {
		RecipeIngredientDeclarationContext _localctx = new RecipeIngredientDeclarationContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_recipeIngredientDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(RECIPE);
			setState(160);
			recipeIdentifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IngredientTypeDeclarationContext extends ParserRuleContext {
		public List<IngredientTypeIdentifierContext> ingredientTypeIdentifier() {
			return getRuleContexts(IngredientTypeIdentifierContext.class);
		}
		public IngredientTypeIdentifierContext ingredientTypeIdentifier(int i) {
			return getRuleContext(IngredientTypeIdentifierContext.class,i);
		}
		public IngredientTypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ingredientTypeDeclaration; }
	}
